--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@ npm run android               # Run on Android device</pre>
         <li>Custom app icon configuration</li>
     </ul>
 
+    <h2>Reach Me</h2>
+        <ul>
+            <li><strong>Mail:</strong> <a href="mailto:sevinc.aeren@gmail.com">sevinc.aeren@gmail.com</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/alierensevinc" target="_blank">alierensevinc</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/alierensevinc" target="_blank">alierensevinc</a></li>
+        </ul>
+
     <footer style="margin-top: 50px; text-align: center; color: #666;">
         <p>Match Point - A Modern Tennis Application</p>
         <p>Built with ❤️ using React Native and Expo</p>
